# read_fluxgate

./: .gitignore  CMakeLists.txt  README.md  plot_data.py  plot_indmeasure_offset.py  plot_offset.py  plot_repeatmeasures.py
src/: parser.cpp
src/include/: constants.h
